app/bin/test/programs/valid/variables/creatingSomeVariables.exe
foo main() -> Int = {
    let kConstValue: Int = 42;
    let kOtherConstValue : Int = 84;
    let kFlag: Bool = false;
    let kNope: Nope = ();

    let mut flag: Bool = true;
    let mut counter: Int = 0;
    let mut uselessNope: Nope = ();
}
