app/bin/test/programs/invalid/blocks/wrong_type.exe
foo main() -> Int = {
    let mut a: Int;
    let mut b: Int;
    /**/
    let m: Int = {
        a>b;
    };
}